# PY01-BD2

./: Dockerfile  README.md  api_test.py  app.py  app_service.py  app_test.py  data_dashboard.py  db.py  db_mongo.py  docker-compose.yml  neo4j_app.py  pyproject.toml  requirements.txt  spark.py  start.sh  streamlit_app.py  test-api.py  test_api.py  test_entry.py  testmongo.py  utils.py
.github/workflows/: docker-image.yml
database/: 00-init.sql  01-relations.sql  02-data.sql  03-functions.sql
endpoints/answers/: answers.py  answers_tests.py
endpoints/colab_edition/: colab_edition.py  colab_edition_tests.py  kafka.py
endpoints/questions/: questions.py  questions_tests.py
endpoints/respondents/: respondents.py  respondents_tests.py
endpoints/surveys/: colab_edition.py  consumer.py  kafka.py  producer.py  surveys.py  surveys_tests.py
endpoints/users/: users.py  users_tests.py
mongo_data/: init-mongo.js
redis-sentinel/: Dockerfile
