[tool.poetry]
name = "python-flask-restapi"
version = "0.1.0"
description = ""
authors = ["Jsue <jsue@go.cr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pymongo = "^4.6.3"
redis = "^5.0.3"
Werkzeug = "^3.0.2"
Flask-JWT-Extended = "^4.6.0"
DateTime = "^5.5"
pyspark = "^3.5.1"
kafka-python = "^2.0.2"
neo4j = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
